--- a/logica de programaçao com JavaScript/index.html
+++ b/logica de programaçao com JavaScript/index.html
@@ -7,6 +7,8 @@
     <title>Lógica de programaçao</title>
 </head>
 <body>
+    <h2>Acompanhamento do livro Lógica de programacao com JavaScript por- Edécio Fernando Lepsen</h2>
+    <p>Parti 1</p>
     <script src="index.js"></script>
 </body>
 </html>
