pratica do livro
pratica do livro

--- a/logica de programaçao com JavaScript/index.html
+++ b/logica de programaçao com JavaScript/index.html
@@ -7,8 +7,25 @@
     <title>Lógica de programaçao</title>
 </head>
 <body>
-    <h2>Acompanhamento do livro Lógica de programacao com JavaScript por- Edécio Fernando Lepsen</h2>
+
+    <h2>Acompanhamento do livro Lógica de programação com 
+        JavaScript por- Edécio Fernando Lepsen.</h2>
     <p>Parti 1</p>
-    <script src="index.js"></script>
+   
+
+    <hr>
+
+    <form>
+        <p>Formularios</p>
+        <p>Nome:
+        <input type="text" id="inNome">
+        <input type="submit" value="Mostrar">
+        </p>
+    </form>
+
+    <h3></h3>
+
+<script src="ex2-1.js/ex_1.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
