--- a/logica de programaçao com JavaScript/index.html
+++ b/logica de programaçao com JavaScript/index.html
@@ -24,8 +24,11 @@
     </form>
 
     <h3></h3>
+    <hr>
+    <p>Vamos ver sobre transpiladores como por exemplo o babel</p>
 
 <script src="ex2-1.js/ex_1.js"></script>
+<script src="ex2-2.js/ex-2.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
