--- a/logica de programaçao com JavaScript/index.html
+++ b/logica de programaçao com JavaScript/index.html
@@ -14,7 +14,7 @@
    
 
     <hr>
-
+<!--
     <form>
         <p>Formularios</p>
         <p>Nome:
@@ -22,10 +22,23 @@
         <input type="submit" value="Mostrar">
         </p>
     </form>
-
     <h3></h3>
+-->
     <hr>
-    <p>Vamos ver sobre transpiladores como por exemplo o babel</p>
+   <h2>Cine JavaScript: Filmes em cartaz.</h2>
+
+   <form>
+   <p>Titulo de Filmes:
+   <input type="text" id="inTitulo" required>
+   </p>
+   <p>Duração (min):
+   <input type="number" id="inDuracao" required>
+   </p>
+   <input type="submit" value="Converter em horas e minutos">
+   <h3></h3>
+   <h4></h4>
+   </form>
+  
 
 <script src="ex2-1.js/ex_1.js"></script>
 <script src="ex2-2.js/ex-2.js"></script>
